# graphql-example

./: pyproject.toml
graphql_example/: app.py
graphql_example/links/: models.py  schema.py
graphql_example/types/: query.py
tests/: test_graphql_example.py
