[tool.poetry]
name = "graphql-example"
version = "0.1.0"
description = ""
authors = ["Gustaf Rydholm <gustaf.rydholm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
graphene = "^2.1.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
